--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "login_hub",
-  "version": "1.0.0",
+  "version": "1.0.15",
   "description": "",
   "scripts": {
     "rollup": "rm -rf dist && rollup -c"
@@ -8,6 +8,9 @@
   "files": [
     "dist"
   ],
+  "types": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/trungls1706/login_hub.git"
@@ -22,9 +25,8 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "esbuild": "^0.17.0",
-    "rollup": "^3.10.0",
-    "rollup-plugin-dts": "^5.1.1",
-    "rollup-plugin-esbuild": "^5.0.0"
+    "@rollup/plugin-terser": "^0.3.0",
+    "rollup-plugin-gzip": "^3.1.0",
+    "rollup": "^3.10.0"
   }
 }
